[tool.poetry]
name = "tweet"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.18.4"
tweepy = "^4.12.1"
streamlit = "^1.15.1"
openai = "^0.25.0"
spacy = "^3.4.3"

[tool.poetry.dev-dependencies]
black = "^22.10"
pycodestyle = "^2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
