[tool.poetry]
name = "tweet"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.18"
tweepy = "^4.12"
streamlit = "^1.15"
openai = "^1.6"
streamlit-analytics = "^0.4"

[tool.poetry.dev-dependencies]
black = "^23.12"
pycodestyle = "^2.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
